# TinyPngOut

./: CMakeLists.txt  README.md
include/: TinyPngOut.hpp  TinyPngOutLib.h
src/: TinyPngOutLib.cpp
